Bug 202948 - Dragging a PDF file to the Desktop and selecting "Previewer" doesn't show the preview
Summary: Dragging a PDF file to the Desktop and selecting "Previewer" doesn't show the...
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-08-07 14:32 UTC by Matteo Agostinelli
Modified: 2009-08-07 18:30 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matteo Agostinelli 2009-08-07 14:32:20 UTC
Version:            (using KDE 4.3.0)
OS:                Linux
Installed from:    Ubuntu Packages

If you drag and drop a PDF file to the Desktop, you get the choice between the Previewer and the Icon. But if you choose the Previewer, it actually creates an empty previewer plasmoid, i.e. it doesn't show the contents of the PDF. On the contrary, the preview is working correctly for other file formats, such as images of text files.
Comment 1 Sebastian Kügler 2009-08-07 15:42:45 UTC
There seems to be something fishy with parsing the command-line arguments of the previewer.
Comment 2 Sebastian Kügler 2009-08-07 18:26:44 UTC
SVN commit 1008493 by sebas:

Use links passed in through args

Makes dropping stuff onto the desktop and creating a previewer actually work.

BUG:202948

 M  +9 -1      plasma-previewer.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1008493
Comment 3 Sebastian Kügler 2009-08-07 18:30:54 UTC
SVN commit 1008495 by sebas:

Fix dropping of content and creating the previewer

We should not just create the applet, but also pass in the filename so it gets loaded, otherwise it would be like clicking on a file, opening the default application for that file-type, but not actually loading the file.

Backported from trunk.

BUG:202948


 M  +9 -1      plasma-previewer.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1008495