Fix dropping of content and creating the previewer

We should not just create the applet, but also pass in the filename so it gets loaded, otherwise it would be like clicking on a file, opening the default application for that file-type, but not actually loading the file.

Backported from trunk.

BUG:202948

svn path=/branches/KDE/4.3/kdeplasma-addons/; revision=1008495